<resources>
    <string name="hextest">\ud835\udd04</string>
    <string name="some_text11"><![CDATA[\ud835\udd04]]></string>
    <string name="app_name">SAMA Contact Lenses</string>
    <string name="double_click_to_exit">Please press the back again to exit app.</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="selCount">Select your country</string>
    <string name="start">Start</string>
    <string name="enter">Enter</string>
    <string name="welcome">Welcome!</string>
    <string name="fillup">Fill up the below fields to create an account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="pass">Password</string>
    <string name="confPass">Confirm Password</string>
    <string name="byConti">By Continuing, I accept all the</string>
    <string name="termsof">Terms of service, Guidelines</string>
    <string name="and">and</string>
    <string name="privacy">Privacy Policy</string>
    <string name="signup">Sign Up</string>
    <string name="signwithsocial">Signup with social networks</string>
    <string name="alreadyHaveAccount">Already have account? Login</string>
    <string name="pleaselogin">Please login to access your account</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="loginwithsocial">Login with social networks</string>
    <string name="dontHaveAccount">Don\'t have an account? Sign Up</string>
    <string name="trendin">Trending Contact Lenses</string>
    <string name="newpro">New products</string>
    <string name="off">Offers</string>
    <string name="category">Category</string>
    <string name="celeb">Celebrities</string>
    <string name="searchresult">Search Result</string>
    <string name="seeAl">SEE ALL</string>
    <string name="productDet">Product Details</string>
    <string name="without">Without Power</string>
    <string name="WithP">With Power</string>
    <string name="withAsig">WIth Astigmatism</string>
    <string name="lefteye">LEFT EYE</string>
    <string name="sph">SPH (POWER/DEGREE)</string>
    <string name="cyl">CYL (CYLINDER)</string>
    <string name="ax">AX (AXIS)</string>
    <string name="base">BASE CURVE</string>
    <string name="righteye">Right Eye</string>
    <string name="sphe">SPEHERE(POWER)</string>
    <string name="optionPrice">Option Price</string>
    <string name="productPrice">Product Price</string>
    <string name="total">Total</string>
    <string name="desc">Description</string>
    <string name="general">General Info</string>
    <string name="lensspec">Lens Specification</string>
    <string name="review">Reviews</string>
    <string name="lensMate">Lens Material</string>
    <string name="watercon">Water Content</string>
    <string name="basecurve">Base Curve</string>
    <string name="diameter">Diameter</string>
    <string name="central">Central Thickness</string>
    <string name="transmisi">Transmisibility</string>
    <string name="clearity">Clearity</string>
    <string name="permeAbility">Permeability</string>
    <string name="QTY">Qty</string>
    <string name="sph_only">SPH</string>
    <string name="cyl_only">CYL</string>
    <string name="cod">(COD Available)</string>
    <string name="addtocart">Add To Cart</string>
    <string name="save">Save and continue</string>
    <string name="entername">Enter your name</string>
    <string name="enteremail">Enter valid email address</string>
    <string name="enterphone">Enter your phone number</string>
    <string name="enterpas">Enter your password</string>
    <string name="confpasswrr">Confirm password does not match with current password</string>
    <string name="title">Title</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="apply_coupon_code">Apply coupon code</string>
    <string name="apply_coupon">Apply coupon</string>
    <string name="enter_your_coupon_code">Enter your coupon code</string>
    <string name="apply">Apply</string>
    <string name="total_items">Total Items</string>
    <string name="total_price">Total Price</string>
    <string name="discount">Discount</string>
    <string name="total_paybale_amount">Total Payable Amount(incl. GST)</string>
    <string name="continue_to_checkout">Continue To Checkout</string>
    <string name="notification">Notification</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_no">Order No : </string>
    <string name="order_on">Ordered on : </string>
    <string name="payment_mode">Payment Mode :  </string>
    <string name="shipping_address">Shipping Address</string>
    <string name="view">View</string>
    <string name="billing_address">Billing Address</string>
    <string name="qty_2">Qty : 2</string>
    <string name="unit_price">Unit Price : </string>
    <string name="total_price_col">"Total Price : "</string>
    <string name="recent_order">Recent Order</string>
    <string name="past_order">Past Order</string>
    <string name="order_details">Order Details</string>
    <string name="order_history">Order History</string>
    <string name="if_you_didnt_receive_a_code">if you have did\'t recive code</string>
    <string name="resend">Resend</string>
    <string name="please_enter_all_the_four_digits_in_order_to_continue">Please enter all the four digits in order to continue</string>
    <string name="entered_verification_code_format_is_invalid">Entered verification code format is invalid</string>
    <string name="verify_success">Verify Success</string>
    <string name="your_email_successfully_verified_login_to_user_continue">Your email successfully verified login to user continue</string>
    <string name="success">Success</string>
    <string name="please_wait_a_moment_you_will_get_an_OTP_in_your_email">Please wait a moment. You will get an OTP in your email</string>
    <string name="done">Done</string>
    <string name="click_here">Click here</string>
    <string name="verify">Verify</string>
    <string name="verification_successful">Verification Successful</string>
    <string name="facebook_app_id" translatable="false">967677813736287</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb967677813736287</string>
    <string name="iNeed2">I need 2 different powers</string>
    <string name="enter_your_keyword">Enter your keyword</string>
    <string name="Filter">Filter</string>
    <string name="submit">Submit</string>
    <string name="right_with_power">✔ With Power</string>
    <string name="right_without_power">✔ Without Power</string>
    <string name="right_with_astigma">✔ With Astigmatism</string>
    <string name="eyes">eyes</string>
    <string name="hello">Hello, User</string>
    <string name="viewPro">View Product</string>
    <string name="searchhere">Search Product</string>
    <string name="post_review">Post Your Review</string>
    <string name="chose_from_library">Choose from gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">cancel</string>
    <string name="ShopNow">Shop Now</string>
    <string name="astigPrice">Astigmatism price</string>
    <string name="gotoCart">Go to cart</string>
    <string name="conti">Continue</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="billing_info">Billing Info</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="payment_method">Payment Method</string>
    <string name="online">✔ Credit Card</string>
    <string name="continue_to_pay">Continue To Pay</string>
    <string name="address_line_1">Address  line 1</string>
    <string name="address_line_2">Address line 2(Optional)</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="offerPro">Offer Products</string>
    <string name="availoff">Available Offers</string>
    <string name="item">Item</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_state">Enter state</string>
    <string name="enter_pin_code">Enter pin code</string>
    <string name="billing_details">Billing Details</string>
    <string name="place_order">Place Order</string>
    <string name="packof">Pack of</string>
    <string name="lensRepl">Replacement</string>
    <string name="item_colon">"Item : "</string>
    <string name="qty">"Qty : "</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_address">Add Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="logout">Logout</string>
    <string name="home_worlk">Heading Ex.: Home..</string>
    <string name="enterheading">Enter Heading</string>
    <string name="curr">Currency</string>
    <string name="lang">Language</string>
    <string name="remove">Remove</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="sale">SALE</string>
    <string name="faq">FAQ</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet_history">Wallet History</string>
    <string name="current_balance">Current Balance</string>
    <string name="transaction_list">Transaction List</string>
    <string name="used_wallet_ball">Used Wallet Balance</string>
    <string name="send_sms">Send Message</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="enter_message">Message</string>
    <string name="enter_subject">Enter subject</string>
    <string name="login">Login</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="collection">Collection</string>
    <string name="home">Home</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="otp_has_been_sent_to_your_mobile">OTP has been sent to your mobile</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="select_billing_address">Select Billing Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="cod_just_available_in_uae">(COD just available in UAE)</string>
    <string name="select_shipping_address">Select Shipping Address</string>
    <string name="billing_address_is_same_as_shipping_address">Billing address is same as shipping address</string>
    <string name="select_from_saved_address">Select From Saved Address</string>
    <string name="personal_information">Personal Information</string>
    <string name="keyword">Keyword</string>
    <string name="sorting">Sorting</string>
    <string name="price_high_low">Price (High - Low)</string>
    <string name="price_low_high">Price (Low - High)</string>
    <string name="price">Price</string>
    <string name="total_paybale_amount_">Total Payable Amount</string>
    <string name="right_cod">✔ COD</string>
    <string name="click_here_to_upload_your_image">Click Here to Upload Your Image</string>
    <string name="description">Description</string>
    <string name="all_review_text">All Review Text</string>
    <string name="emirati_dirham">Emirati dirham</string>
    <string name="omani_rial">Omani rial</string>
    <string name="raksur">Raksur</string>
    <string name="kuwaiti_dinar">Kuwaiti Dinar</string>
    <string name="united_states_dollar">United States dollar</string>
    <string name="select_currency">Select Currency</string>
</resources>