<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".Activity.SignUpActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:onClick="back"
        android:padding="5sp"
        android:src="@drawable/back_arw" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/cairo_regular"
                android:text="@string/fillup"
                android:textAlignment="center"
                android:textColor="@color/txtColorLabel"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/txtColorLabel" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/txtColorLabel" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:layout_marginTop="20sp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >
                    <Spinner
                        android:id="@+id/country_code_spin"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:minWidth="130dp"
                        android:layout_height="match_parent"
                        android:onClick="countryCodePopup"/>
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColor="@color/txtColorLabel" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:forceHasOverlappingRendering="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp">

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:textDirection="locale"
                        android:singleLine="true"
                        android:drawableEnd="@drawable/ic_visibility"
                        android:textColor="@color/txtColorLabel" />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/button1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:text=" "
                    android:background="?android:attr/selectableItemBackground"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:forceHasOverlappingRendering="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp">

                    <EditText
                        android:id="@+id/confpass"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confPass"
                        android:inputType="textPassword"
                        android:textAlignment="viewStart"
                        android:textDirection="locale"
                        android:drawableEnd="@drawable/ic_visibility"
                        android:singleLine="true"
                        android:textColor="@color/txtColorLabel" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/button2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:text=" "
                    android:background="?android:attr/selectableItemBackground"
                    />
            </RelativeLayout>



            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo_medium"
                android:text="@string/byConti"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/pink_grad_button"
                android:fontFamily="@font/cairo_regular"
                android:onClick="signUp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:fontFamily="@font/cairo_medium"
                android:text="@string/signwithsocial"
                android:textAlignment="center"
                android:textColor="@color/txtColorLabel"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:layout_marginTop="15sp">

                <LinearLayout
                    android:id="@+id/googleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/grey_back_strock"
                    android:gravity="center_vertical"
                    android:paddingStart="20sp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp">

                    <ImageView
                        android:layout_width="32sp"
                        android:layout_height="32sp"
                        android:layout_marginEnd="15sp"
                        android:src="@drawable/icon39" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/cairo_bold"
                        android:gravity="center_vertical"
                        android:text="@string/google"
                        android:textColor="@color/txtColorLabel"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fblogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_back_button"
                    android:gravity="center"
                    android:paddingStart="20sp"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:visibility="gone" />

                    <ImageView
                        android:layout_width="32sp"
                        android:layout_height="32sp"
                        android:layout_marginEnd="15sp"
                        android:src="@drawable/icon40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/cairo_bold"
                        android:gravity="center_vertical"
                        android:text="@string/facebook"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/cairo_regular"
                android:onClick="login"
                android:text="@string/alreadyHaveAccount"
                android:textAlignment="center"
                android:textColor="@color/txtColorLabel"
                android:textSize="17sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>